--- a/infra/ecs/docker-compose.lindera-api.yml
+++ b/infra/ecs/docker-compose.lindera-api.yml
@@ -3,3 +3,13 @@ services:
   app:
     image: syuren42/lindera-api:latest
     container_name: lindera-api
+    ports:
+        - 8080:8080
+    environment:
+        - RUST_BACKTRACE=1
+    logging:
+        driver: awslogs
+        options:
+          awslogs-region: ap-northeast-1
+          awslogs-group: "/lindera-api-service"
+          awslogs-stream-prefix: "fargate-"
